# stableX

./: CHANGELOG.md  CONTRIBUTING.md  Cantilever.py  LICENSE  LICENSE.md  README.md  a1.csv  a2.csv  fixed_frame_with_springs.py  frame_with_springs.py  main.py  nonlinear_spring.py  pyproject.toml
Examples/: Cantilever.py  arch.py  cantilever.py  chevron_bracing.py  fixed_frame.py  fixed_frame_with_semi_rigid_base.py  fixed_frame_with_semi_rigid_base.xlsx  fixed_frame_with_semi_rigid_joints.py  fixed_frame_with_springs.py  frame_with_springs.py  multi_storey_braced_frame.py  multi_storey_braced_frame_2.py  multi_storey_frame.py  paper_fixed_frame_with_semi_rigid_joints.py  pinned_column.py  truss_cantilever.py
docs/: Makefile  conf.py  example_pinned_column.ipynb  make.bat
examples/: arch.py  cantilever.py  crane_frame.py  fixed_frame.py  fixed_frame_with_semi_rigid_base.py  fixed_frame_with_semi_rigid_joints.py  multi_storey_braced_frame.py  multi_storey_frame.py  overhang.py  pinned_column.py  portal_frame.py  rigid_bars_with_spring.py  trapezoidal_frame.py  triangulated_frame.py  truss_cantilever.py  trussed_column.py
examples/Thesis/: paper_fixed_frame_with_semi_rigid_base.py  paper_fixed_frame_with_semi_rigid_base_and_joints.py  paper_fixed_frame_with_semi_rigid_joints.py  thesis_fixed_frame.py  thesis_fixed_multi_storey_frame_with_semi_rigid_joints.py
src/stablex/: __init__.py  degree_of_freedom.py  node.py  section.py  stability_functions.py  structure.py
src/stablex/elements/: element.py
stableX/: __init__.py  degree_of_freedom.py  node.py  section.py  solver.py  stability_functions.py  structure.py  visualizer.py
stableX/Elements/: element.py  frame_element.py
stableX/Visualization/: __init__.py  visual_element.py  visual_element_factory.py  visual_rotational_spring_element.py  visual_unidimensional_element.py  visualizer.py
stableX/elements/: element.py
stableX/loads/: load.py
stableX/solver/: eigen_solver.py  nonlinear_solver.py  solver.py
stableX/visualization/: __init__.py  visual_element.py  visual_element_factory.py  visual_rotational_spring_element.py  visual_unidimensional_element.py  visualizer.py
tests/: test_section.py  test_stablex.py
(+25 files in other folders)
