[tool.poetry]
name = "stablex"
version = "0.1.1"
description = "A Python library for stability analysis of structures"
authors = ["Hazem Kassab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "1.25.2"


[tool.poetry.dev-dependencies]
jupyter = "^1.1.1"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
mathjax = "^0.1.2"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
include = ["src/*"]
exclude = ["examples", "examples.*", "tests", "tests.*"]
