[tool.poetry]
name = "stableX"
version = "0.1.3"
description = "A Python library for stability analysis of structures"
authors = ["Hazem Kassab"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Hazem-Kassab/stableX"

[project.urls]
"Source" = "https://github.com/Hazem-Kassab/stableX"
"Releases" = "https://github.com/Hazem-Kassab/stableX/releases"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"
numpy = "^1.25.0"


[tool.poetry.dev-dependencies]
jupyter = "^1.1.1"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
mathjax = "^0.1.2"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
include = ["src/*"]
exclude = ["examples", "examples.*", "tests", "tests.*"]
